--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,6 +6,7 @@
 - company: Baltimore Civic Fund
   url: https://www.baltimorecivicfund.org/
   time: May 2022 - December 2022
+  position: Consultant
 
 - company: Thinkful
   url: https://www.thinkful.com/
