--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -10,15 +10,10 @@
 
 - company: Thinkful
   url: https://www.thinkful.com/
-  time: 2019 - 2020
+  time: August 2019 - February 2020
   position: Data Analyst
 
 - company: Hyatt - Driskill Hotel
   url: https://driskillhotel.com/
-  time: 2013 - 2019
+  time: November 2013 - March 2019
   position: Hospitality Leader
-
-- company: Toyon Literary Magazine
-  url: https://www.toyonliterarymagazine.org/
-  time: 2012 - 2013
-  position: Editor
