--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -6,7 +6,7 @@ url: https://AfredTX.github.io/
 baseurl: ''
 email: Fredrandall333@gmail.com
 cover: https://AfredTX.github.io/img/og.png
-logo: https://AfredTX.github.io/img/emojis/technologist.png
+logo: https://AfredTX.github.io/img/emojis/eagle.png
 resume: https://github.com/AfredTX/AfredTX.github.io/blob/master/Frederic%20Randall%20Resume%202020(1).pdf
 social:
   - title: email
