--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Frederic Randall
-title: Frederic Randall | Data Analyst
-description: Data analyst with a passion for research and design.
+title: Frederic Randall | Data & IT Operations Manager
+description: Motivated change agent with a passion for data analysis and project management.
 url: https://AfredTX.github.io/
 baseurl: ''
 email: Fredrandall333@gmail.com
