--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fredrandall.com",
   "version": "0.0.0",
-  "description": "Design-minded front-end software engineer focused on building beautiful interfaces and experiences",
+  "description": "Nonprofit leader specializing in data and IT operations management.",
   "repository": {
     "type": "git",
     "url": "https://github.com/bchiang7/AfredTX.github.io"
