--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -7,7 +7,7 @@ baseurl: ''
 email: Fredrandall333@gmail.com
 cover: https://AfredTX.github.io/img/og.png
 logo: https://AfredTX.github.io/img/emojis/eagle.png
-resume: Frederic Randall Resume.pdf
+resume: https://github.com/AfredTX/AfredTX.github.io/blob/5c909220681ed56ce79e67737f9dd17dd7c09f59/Frederic%20Randall%20Resume.pdf
 social:
   - title: email
     url: mailto:FredRandall333@gmail.com
