--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -6,8 +6,8 @@ url: https://AfredTX.github.io/
 baseurl: ''
 email: Fredrandall333@gmail.com
 cover: https://AfredTX.github.io/img/og.png
-logo: https://AfredTX.github.io/img/emojis/eagle.png
-resume: https://AfredTX.github.io/Frederic%20Randall%20Resume.pdf
+logo: https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/325/eagle_1f985.png
+resume: https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:d388cbbd-5b3c-3c97-b8d7-aff4bfef3301
 social:
   - title: email
     url: mailto:FredRandall333@gmail.com
