--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 name: Frederic Randall
-title: Frederic Randall | Data Analyst
-description: Data analyst with a passion for research and design.
+title: Frederic Randall | Operations Manager
+description: Operations manager with a passion for data anlysis and project managment.
 url: https://AfredTX.github.io/
 baseurl: ''
 email: Fredrandall333@gmail.com
 cover: https://AfredTX.github.io/img/og.png
-logo: https://AfredTX.github.io/img/emojis/technologist.png
-resume: https://github.com/AfredTX/AfredTX.github.io/blob/master/Frederic%20Randall%20Resume%202020(1).pdf
+logo: https://AfredTX.github.io/img/emojis/eagle.png
+resume: https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:d388cbbd-5b3c-3c97-b8d7-aff4bfef3301
 social:
   - title: email
     url: mailto:FredRandall333@gmail.com
