--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,6 +7,11 @@
   url: https://www.baltimorecivicfund.org/
   time: May 2022 - December 2022
   position: Consultant
+  
+- company: Maryland Nonprofits Annual Conference
+  url: https://www.marylandnonprofits.org
+  time: October 2021
+  position: Speaker  
 
 - company: Thinkful
   url: https://www.thinkful.com/
